add javadocs, fixed some flaky tests, add clipboard convenience methods

--- a/matrix-stats/v2.4.0-roadmap.md
+++ b/matrix-stats/v2.4.0-roadmap.md
@@ -4,123 +4,163 @@ This document outlines the planned work for adding a FormulaEvaluator to matrix-
 
 ## Summary
 
-v2.4.0 introduces a general formula evaluator to power richer model formulas and
-support multiple smoothing methods (lm, loess, gam) for downstream consumers
-(e.g. matrix-charts).
+v2.4.0 introduces a general formula evaluator aligned with R-style formulas to power
+richer model specifications, consistent model frames, and multiple smoothing methods
+(lm, loess, gam) for downstream consumers (e.g. matrix-charts).
 
 ---
 
-## Priority 1: FormulaEvaluator Core (Must Do)
+## Priority 1: Formula Grammar and Parsing (Must Do)
 
 ### 1.1 [ ] Define formula grammar and public API
-- Document supported syntax (response ~ terms, +, -, :, *, intercept control)
-- Specify built-in transforms (e.g., log(), sqrt(), exp(), poly(x, n), I(...))
-- Define API shape (e.g., FormulaEvaluator.evaluate(data, formula, options))
+- Supported syntax: response ~ terms, +, -, :, *, intercept control (0/1/-1)
+- R-style operators: dot expansion (.), interaction expansion (^), nesting (/)
+- Parentheses grouping and backtick-quoted column names
+- Built-in transforms: log(), sqrt(), exp(), poly(x, n), I(...)
+- Multi-response policy (explicitly supported or explicitly rejected)
 
 ### 1.2 [ ] Implement tokenizer and parser to AST
-- Create token types and an AST model for terms, transforms, interactions
-- Ensure clear error messages for invalid formulas
+- Token types for operators, identifiers, function calls, literals, backticks
+- AST nodes for terms, transforms, interactions, and grouping
+- Clear error messages with location context
 
-### 1.3 [ ] Build design matrix from AST
-- Map variables to data columns
-- Handle intercept, interactions, and polynomial terms
-- Decide handling of categorical terms (one-hot or error) and document it
-
-### 1.4 [ ] Define FitResult / ModelResult output
-- Standardize outputs: fitted values, optional se bands, residuals, diagnostics
-- Keep output consistent across methods (lm, loess, gam)
+### 1.3 [ ] Implement formula update and normalization helpers
+- Provide utilities for defaulting to `y ~ x` when appropriate
+- Normalize equivalent formulas to a consistent internal form
 
 ---
 
-## Priority 2: Smoothing/Model Methods (Must Do)
+## Priority 2: Model Frame Evaluation (Must Do)
 
-### 2.1 [ ] Add method registry and interface
-- Define a FitMethod interface and registry keyed by method name (lm, loess, gam)
-- Validate method-specific parameters (span, degree, family, etc.)
+### 2.1 [ ] Build a ModelFrame pipeline
+- Resolve variables from data (data-first evaluation)
+- Optional explicit environment resolution hook (if needed later)
+- Support dot expansion and exclusion (-) before matrix building
 
-### 2.2 [ ] Implement lm adapter using existing regressions
+### 2.2 [ ] Support weights, offset, subset, and na.action
+- weights: numeric vector aligned to rows
+- offset: numeric vector applied to fitted values
+- subset: row filter expression or boolean mask
+- na.action: omit/fail/exclude behavior
+
+---
+
+## Priority 3: Design Matrix and Categorical Handling (Must Do)
+
+### 3.1 [ ] Implement design matrix builder from AST
+- Intercept handling, interactions, polynomial terms
+- Preserve column name mapping for downstream diagnostics
+
+### 3.2 [ ] Add categorical handling and contrasts
+- Factor detection and consistent encoding policy
+- Default contrasts (treatment) with opt-in alternatives
+- Interactions involving categorical terms
+
+### 3.3 [ ] Introduce Terms metadata object
+- R-like terms summary for downstream consumers
+- Keep mapping from formula terms to design matrix columns
+
+---
+
+## Priority 4: Method Registry and Model Fits (Must Do)
+
+### 4.1 [ ] Add FitMethod interface and registry
+- Registry keyed by method name (lm, loess, gam)
+- Method-specific parameter validation (span, degree, family, etc.)
+
+### 4.2 [ ] Implement lm adapter using existing regressions
 - Use LinearRegression/PolynomialRegression via the design matrix
-- Support formulas that expand beyond simple poly degree
+- Support expanded formulas beyond simple poly degree
 
-### 2.3 [ ] Implement loess
-- Implement local regression with span and degree support
-- Reuse existing `LinearRegression` or `PolynomialRegression` for local fits with weighted observations
-- Implement tricube weight function for neighbour weighting
+### 4.3 [ ] Implement loess
+- Local regression with span/degree and tricube weights
+- Accept weights from ModelFrame when provided
 - Return fitted values and optional standard errors
-  For LOESS without commons-math3, you can reuse existing regression classes:
 
-```groovy
-  class LoessRegression {
-    // Reuse existing LinearRegression for degree=1 local fits                                      
-    // or PolynomialRegression for degree=2                                                                   
-    BigDecimal predict(Number x, List<Number> xData, List<Number> yData, BigDecimal span, int degree) {            
-      // 1. Find neighbors within span
-        int k = (span * xData.size()).intValue()
-        def neighbors = findKNearestNeighbors(x, xData, yData, k)
-        // 2. Calculate tricube weights based on distance
-        def weights = calculateTricubeWeights(x, neighbors.x)
-        // 3. Fit weighted regression using existing classes
-        // LinearRegression already computes via normal equations
-        // Could add weighted version or use weighted observations
-        def localFit = degree == 1 ? new WeightedLinearRegression(neighbors.x, neighbors.y, weights) : new WeightedPolynomialRegression(neighbors.x, neighbors.y, weights, degree)
-        return localFit.predict(x)                                                       
-      }                                                                                  
-  }
-```
-  The key reusable components from existing code:
-  - Normal equations computation pattern from LinearRegression
-  - Polynomial evaluation (Horner's method) from PolynomialRegression
-  - R² calculation pattern
-  - Prediction API design
-
-### 2.4 [ ] Implement gam
-- Choose implementation strategy (spline basis or dependency)
-- Add smooth term support (e.g., s(x)) or document minimal subset
+### 4.4 [ ] Implement gam
+- Decide strategy (native spline basis or dependency)
+- Support smooth terms (s(x)) or document minimal subset
 
 ---
 
-## Priority 3: Tests, Docs, and Validation (Must Do)
+## Priority 5: Tests, Docs, and Validation (Must Do)
 
-### 3.1 [ ] Parser and AST tests
-- Valid formulas, invalid syntax, edge cases
+### 5.1 [ ] Parser and AST tests
+- ., ^, /, parentheses, backticks, I(), poly(), s()
+- Valid/invalid formula cases and edge conditions
 
-### 3.2 [ ] Evaluator tests
-- Design matrix correctness for transforms and interactions
-- Consistent results across lm/loess/gam for known datasets
+### 5.2 [ ] ModelFrame tests
+- weights/offset/subset/na.action behavior
+- Dot expansion and exclusion
 
-### 3.3 [ ] GroovyDoc and README updates
+### 5.3 [ ] Design matrix and contrasts tests
+- Column naming, categorical encoding, interactions
+
+### 5.4 [ ] Method tests
+- lm/loess/gam with known datasets
+- Consistent output shapes and diagnostics
+
+### 5.5 [ ] GroovyDoc and README updates
 - Document formula syntax, supported methods, and limitations
 
-### 3.4 [ ] Run matrix-stats tests
+### 5.6 [ ] Run matrix-stats tests
 - Command: `./gradlew :matrix-stats:test`
 
 ---
 
-## Priority 4: Remove commons-math3 Dependency (Should Do)
+## Priority 6: Linear Algebra Module (Should Do)
+
+### 6.1 [ ] Define scope and API in matrix-stats
+- Provide a `Linalg` facade under `se.alipsa.matrix.stats.linalg` (or a dedicated `matrix-linalg` module owned by stats)
+- Decide numeric types, precision defaults, and conversion rules
+
+### 6.2 [ ] EJML-based implementation
+- `inverse`, `det`, `eigenvalues`, `svd`, `solve(A, b)`
+- Add Matrix/Grid adapters and type conversion rules
+
+### 6.3 [ ] Tests and documentation
+- Numeric accuracy tests vs known results
+- Document expected numeric types and precision limits
+
+---
+
+## Priority 7: Interpolation Utilities (Should Do)
+
+### 7.1 [ ] Add interpolation helpers
+- Linear interpolation for numeric columns/series
+- Decide API surface (stat util vs dedicated Interpolation class)
+
+### 7.2 [ ] Evaluate spline support
+- Decide scope (linear only vs cubic/spline)
+- Identify dependency or implement minimal spline math
+
+---
+
+## Priority 8: Remove commons-math3 Dependency (Should Do)
 
 Apache Commons Math3 is deprecated and should be replaced with native implementations or alternative libraries. Current usage:
 
-### 4.1 [ ] Replace distribution classes
+### 8.1 [ ] Replace distribution classes
 - ChiSquaredDistribution, NormalDistribution, FDistribution, HypergeometricDistribution
 - Used in: Ellipse, Fisher, ChiSquared, CochranArmitage, TurningPoint, Chow, Granger, CochranMantelHaenszel, Portmanteau, Lilliefors, KSquared, JarqueBera, KolmogorovSmirnov, ShapiroWilk, AndersonDarling, ShapiroFrancia, CramerVonMises
 - Options: Implement CDF/PDF functions natively or use Smile's distributions (already a dependency in matrix-smile)
 
-### 4.2 [ ] Replace linear algebra classes
+### 8.2 [ ] Replace linear algebra classes
 - Array2DRowRealMatrix, LUDecomposition, RealMatrix
 - Used in: RegressionUtils, Johansen
 - Options: Implement using Grid operations or use EJML library
 
-### 4.3 [ ] Replace optimisation/solver classes
+### 8.3 [ ] Replace optimisation/solver classes
 - PolynomialCurveFitter, SimplexOptimizer, NelderMeadSimplex, BrentSolver
 - Used in: PolynomialRegression, LogisticRegression, QuantileRegression, GoalSeek
 - Options: Implement polynomial fitting using normal equations, implement simplex natively
 
-### 4.4 [ ] Replace statistical utilities
+### 8.4 [ ] Replace statistical utilities
 - OLSMultipleLinearRegression, KolmogorovSmirnovTest, StatUtils
 - Used in: Adf, KolmogorovSmirnov, ShapiroWilk, ShapiroFrancia
 - Options: Extend existing LinearRegression for multiple regression, implement tests natively
 
-### 4.5 [ ] Move commons-math3 to testImplementation only
+### 8.5 [ ] Move commons-math3 to testImplementation only
 - Keep for test validation/comparison if needed
 - Remove from runtime dependencies
 
@@ -128,8 +168,12 @@ Apache Commons Math3 is deprecated and should be replaced with native implementa
 
 ## Open Questions
 
-### 5.1 [ ] Decide categorical handling strategy
+### 9.1 [ ] Decide categorical handling strategy
 - One-hot encoding vs. explicit error until categorical support is added
+- Default contrasts and configuration surface
 
-### 5.2 [ ] Decide gam implementation dependency
+### 9.2 [ ] Decide gam implementation dependency
 - Evaluate whether to implement internally or adopt a library
+
+### 9.3 [ ] Decide formula evaluation scope
+- Data-only evaluation vs. optional external environment resolution
