--- a/matrix-charts/v0.5.0-roadmap.md
+++ b/matrix-charts/v0.5.0-roadmap.md
@@ -6,7 +6,8 @@ into ggplot smoothing and formula handling.
 ## Summary
 
 v0.5.0 replaces ad-hoc formula parsing in GgStat with the shared FormulaEvaluator,
-expands supported formula syntax, and honours smoothing methods like loess and gam.
+expands supported formula syntax toward R compatibility, and honours smoothing
+methods like loess and gam.
 
 ---
 
@@ -18,6 +19,7 @@ expands supported formula syntax, and honours smoothing methods like loess and g
 
 ### 1.2 [ ] Update stat_smooth/geom_smooth parameter mapping
 - Map ggplot parameters (method, formula, degree, span, se, level, n)
+- Add mapping for weights/offset/subset where provided
 - Validate conflicting params consistently (formula vs degree)
 
 ### 1.3 [ ] Use evaluator output consistently
@@ -26,23 +28,41 @@ expands supported formula syntax, and honours smoothing methods like loess and g
 
 ---
 
-## Priority 2: API and Documentation (Should Do)
+## Priority 2: API and Behavior Alignment (Should Do)
 
-### 2.1 [ ] Document supported formula syntax in ggPlot.md
-- Add examples for poly(), transforms, and interactions
+### 2.1 [ ] Support richer formula syntax in geom_smooth
+- ., ^, /, parentheses, backticks, I(), poly(), s()
+- Surface clear errors for unsupported constructs
 
-### 2.2 [ ] Add examples for loess and gam
-- Update README and examples folder with new usage patterns
+### 2.2 [ ] Clarify data/weights/offset precedence
+- Document how aes mappings and stat params combine
+- Ensure weights and offsets are passed to the evaluator
 
 ---
 
 ## Priority 3: Tests (Must Do)
 
 ### 3.1 [ ] Expand GgStatTest coverage
-- Formula parsing delegation, interaction terms, transform terms
+- Delegation to FormulaEvaluator
+- Interaction terms and transform terms
+- Dot expansion and exclusions
 
 ### 3.2 [ ] Add regression tests for method switching
 - geom_smooth(method: 'loess') and geom_smooth(method: 'gam')
 
-### 3.3 [ ] Run matrix-charts tests
+### 3.3 [ ] Add tests for weights/offset/na.action
+- Validate behaviour with missing values and subsets
+
+### 3.4 [ ] Run matrix-charts tests
 - Command: `./gradlew :matrix-charts:test -Pheadless=true`
+
+---
+
+## Priority 4: Documentation and Examples (Should Do)
+
+### 4.1 [ ] Update ggPlot.md and README
+- Document supported formula syntax and method parameters
+- Include compatibility notes vs R
+
+### 4.2 [ ] Add examples for loess and gam
+- Update examples folder with new usage patterns
