use more idiomatic groovy constructs

--- a/matrix-charts/docs/v0.5.0-roadmap.md
+++ b/matrix-charts/docs/v0.5.0-roadmap.md
@@ -66,3 +66,13 @@ methods like loess and gam.
 
 ### 4.2 [ ] Add examples for loess and gam
 - Update examples folder with new usage patterns
+
+# TODO
+There are 2115 junit tests in matrix-charts. The GgPlotTest alone takes several minutes to complete. Running the build takes an inhibiting long time which will lead to developers skipping tests altogether. I suspect that several code paths are tested multiple times.
+I would like to slim things down without loosing coverage. Please investigate if this can be improved by removing duplicate testing of the same functionality. If there are no significant ways to improve it, consider dividing the test suite into some high level tests that hits most of the surface and then the other group that tests all the details where the second group would be opt-in. Create a plan to do this in matrix-charts/docs/testing-improvements.md. Dont implement anything yet, just investigate, think and create a plan.
+
+NumberCoercionUtil seems redundant. Investigate if it is possible to remove it and replace it with ValueConverter from matrix-core to keep things DRY.
+
+Check if there are any occurances of no-idiomatic groovy in matrix-charts. Examples would be use of java.lang.Math, conversions to double or other primitives, use of new ArrayList() instead of [], use of new LinkedHashMap() instead of [:] and any other "java like" constructs when there is a better groovy alternative. These rules are all described in AGENTS.md but seem to have been overlooked at times.
+
+Create a plan to move gg functionality from matrix-charts into its own subproject called matrix-ggcharts. Charm and Charts in matrix-charts should be unaffected by the move from a functionality standpoint (though some things might need to be made accessible from the new ggcharts project). matrix-ggcharts should depend on matrix-charts and the gg (ggplot2 like api) should use the charm implementation for the actual implementaiton functionality just like today. Include moving documentation in the plan.
