test improvements phase 1-4

--- a/matrix-stats/v2.4.0-roadmap.md
+++ b/matrix-stats/v2.4.0-roadmap.md
@@ -140,22 +140,22 @@ richer model specifications, consistent model frames, and multiple smoothing met
 
 Apache Commons Math3 is deprecated and should be replaced with native implementations or alternative libraries. Current usage:
 
-### 8.1 [ ] Replace distribution classes
+### 8.1 [ ] Update distribution classes with native implementaitons
 - ChiSquaredDistribution, NormalDistribution, FDistribution, HypergeometricDistribution
 - Used in: Ellipse, Fisher, ChiSquared, CochranArmitage, TurningPoint, Chow, Granger, CochranMantelHaenszel, Portmanteau, Lilliefors, KSquared, JarqueBera, KolmogorovSmirnov, ShapiroWilk, AndersonDarling, ShapiroFrancia, CramerVonMises
 - Options: Implement CDF/PDF functions natively or use Smile's distributions (already a dependency in matrix-smile)
 
-### 8.2 [ ] Replace linear algebra classes
+### 8.2 [ ] Update linear algebra classes with native implementations
 - Array2DRowRealMatrix, LUDecomposition, RealMatrix
 - Used in: RegressionUtils, Johansen
 - Options: Implement using Grid operations or use EJML library
 
-### 8.3 [ ] Replace optimisation/solver classes
+### 8.3 [ ] Update optimisation/solver classes
 - PolynomialCurveFitter, SimplexOptimizer, NelderMeadSimplex, BrentSolver
 - Used in: PolynomialRegression, LogisticRegression, QuantileRegression, GoalSeek
 - Options: Implement polynomial fitting using normal equations, implement simplex natively
 
-### 8.4 [ ] Replace statistical utilities
+### 8.4 [ ] Update statistical utilities
 - OLSMultipleLinearRegression, KolmogorovSmirnovTest, StatUtils
 - Used in: Adf, KolmogorovSmirnov, ShapiroWilk, ShapiroFrancia
 - Options: Extend existing LinearRegression for multiple regression, implement tests natively
