--- a/matrix-stats/v2.4.0-roadmap.md
+++ b/matrix-stats/v2.4.0-roadmap.md
@@ -140,7 +140,7 @@ richer model specifications, consistent model frames, and multiple smoothing met
 
 Apache Commons Math3 is deprecated and should be replaced with native implementations or alternative libraries. Current usage:
 
-### 8.1 [ ] Update distribution classes with native implementaitons
+### 8.1 [ ] Update distribution classes with native implementations
 - ChiSquaredDistribution, NormalDistribution, FDistribution, HypergeometricDistribution
 - Used in: Ellipse, Fisher, ChiSquared, CochranArmitage, TurningPoint, Chow, Granger, CochranMantelHaenszel, Portmanteau, Lilliefors, KSquared, JarqueBera, KolmogorovSmirnov, ShapiroWilk, AndersonDarling, ShapiroFrancia, CramerVonMises
 - Options: Implement CDF/PDF functions natively or use Smile's distributions (already a dependency in matrix-smile)
